Fix width/spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.App {
+  max-width: 95%;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
 .card {
   padding: 1em;
   background-color: #ffffff;
